hero button hover added

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -289,6 +289,10 @@ section#shopify-section-template--17100663292212__a870b710-2e0b-4d23-8e7d-f79fb6
   padding: 9px 15px;
   letter-spacing: 0;
 }
+.image-with-text__content .button--primary:hover {
+  background: #3f3a4c;
+  color: #fff;
+}
 section#shopify-section-template--17100663292212__783aacd0-5812-4105-9b91-29b53e72c5e8
   .multicolumn-card__info
   h3 {
